--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 	</section>
 	<section id="work" class="flex-col j-c al-c dark-white-2">
 		<div class="container">
-				<div class="padding">
-					<div class="flex-box proj-buttons-cont">
-					<a href="#ritacms" class="btn">Club Portal</a>
-					<a href="#milo" class="btn">Productivity</a>
-					<a href="#nurture-life" class="btn">eCommerce Web</a>
-					<a href="#united-cargo" class="btn">Mobile app</a>
-				</div>
+			<div class="flex-box proj-buttons-cont">
+				<a href="#ritacms" class="btn">Club Portal</a>
+				<a href="#milo" class="btn">Productivity</a>
+				<a href="#nurture-life" class="btn">eCommerce Web</a>
+				<a href="#united-cargo" class="btn">Mobile app</a>
+			</div>
+			<div class="padding">
 				<div class="flex-box al-fl-st scroll-box">
 					<div id="ritacms" class="card">
 						<a href="work/rita-cms/"><img src="media/rita-cms-thumb.png" width="100%"></a>
-						<a href="work/rita-cms/"><h3>Rita CMS -- Software Development</h3></a>
+						<a href="work/rita-cms/"><h3>Rita CMS -- WordPress Development</h3></a>
 						<p>WordPress web app for club management</p>
 						<p style="color: grey;">#UXDesign #WordPress #Dataverse #API #PHP #Twig #FetchXML</p>
 					</div>
@@ -96,7 +96,7 @@
 					</div>
 					<div id="ritacms" class="card">
 						<a href="work/rita-cms/"><img src="media/rita-cms-thumb.png" width="100%"></a>
-						<a href="work/rita-cms/"><h3>Rita CMS -- Software Development</h3></a>
+						<a href="work/rita-cms/"><h3>Rita CMS -- WordPress Development</h3></a>
 						<p>WordPress web app for club management</p>
 						<p style="color: grey;">#UXDesign #WordPress #Dataverse #API #PHP #Twig #FetchXML</p>
 					</div>
