--- a/work/milo/index.html
+++ b/work/milo/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" href="../../favicon.ico">
 </head>
 <body class="flex-col j-c">
-	<section id="top-nav" class="header flex-col j-c al-c">
+	<section id="top-nav" class="header flex-col j-c al-c" style="background-color: #1a1a1a;">
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr padding">
