--- a/work/nurture-life/index.html
+++ b/work/nurture-life/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" href="../../favicon.ico">
 </head>
 <body class="flex-col j-c">
-	<section id="top-nav" class="header flex-col j-c al-c">
+	<section id="top-nav" class="header flex-col j-c al-c" style="background-color: #1a1a1a;">
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr padding">
@@ -97,16 +97,16 @@
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>The Product</h5>
 						<h2>Nurture Life sells subscriptions for quick and healthy meal plans for kids.</h2>
-						<p>With many onboard features, Milo is a clever internal tool developed on Microsoft Power Apps to provide task ownership, prioritization, project creation, and time keeping.
+						<p>A growing market for healthy and quick meals spawned the birth of Nurture Life, an eCommerce subscription website.</p>
 					</div>
 					<div class="fl-50 col-r marg">
 						<div class="blue-call">
 							<h4>The problem</h4>
-							<p>A disjointed and fragmented worflow experience is hindering management and team members from delivering faster, with too many clicks, items buried in different screens, and the necessity to use external platforms like Excel.</p>
+							<p>Not enough users are signing up for account creation. A subscription plan exists, but more users need to be engaging with product and signing up.</p>
 						</div>
 						<div class="blue-call">
 							<h4>The outcome</h4>
-							<p>I delivered a new workflow experience for for managers to better prioritize employees' work loads.</p>
+							<p>I designed three different user flow experiences to address three different levels of user engagement to get users to engage with the brand incrementally to develop more of a relationship that would lead to account conversions.</p>
 						</div>
 					</div>
 				</div>
@@ -116,8 +116,8 @@
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
-						<h2>Project managers need a streamlined prioritization tool.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h2>Busy parents need healthy, quick meals that kids actually want to eat.</h2>
+						<p>Kids are picky. Kids have allergies. Parents want easy options, but don't want to give up too much of their own information.</p>
 					</div>
 				</div>
 				<div class="flex-box al-c">
@@ -126,8 +126,8 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Opportunity</h5>
-						<h2>A large portion of time is wasted using external tools.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h2>Engage users comfortably. Don't ask too much too soon. Promote subscription sales.</h2>
+						<p>An optimal blend of user conversion tactics combined with user-centered fundamentals will help parents start to engage with the Nurture Life products yet still allow different user profile detila to be gleaned. These include things like the kind of foods kids like to eat, what products sell well, what ages enjoy different items. So on.</p>
 					</div>
 				</div>
 			</div>
@@ -215,44 +215,44 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/account-too-early.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Prompts to create an account too early</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>Users tend to abandon their shopping experience by annoyingly invasive prompts to sign up for newsletters, give an email address, or navigate away from the current page.</p>
 					</div>
 				</div>
 			</div>
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/checkout-process.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Checkout process is long and complicated</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>Online shoppers will not go through any experience that loses their interest and attention. People like to get the products they want quickly. If it's too clunky or difficult, they will just reorient and navigate elsewhere.</p>
 					</div>
 				</div>
 			</div>
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/extra-costs.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Extra costs are too high</h3>
-						<p>(shipping, tax, and fees) Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>If different costs outside of the individual product base like shipping, costs, extra fees, and service charges are high and unexpected, shoppers will abandon the cart.</p>
 					</div>
 				</div>
 			</div>
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/total-cost.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h3>Can't calculate total order cost up front</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>If the total cost of every single included fee and item is not calculabe in a sum amount, users will get confused and lose trust in the shopping experience. This distrust fuels uncertainty, which prevents a user from completing the checkout.</p>
 					</div>
 				</div>
 			</div>
@@ -316,32 +316,22 @@
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
-					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
+					<div class="fl-60 col-r marg">
+						<img class="shad" src="../../media/buy-now-create-account-1.png" alt="" width="100%">
 					</div>
-					<div class="fl-50 j-fl-st col-l t-l marg">
+					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
 						<h2 class="big">Feature 1</h2>
 						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
-					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
+					<div class="fl-60 col-r marg">
+						<img class="shad" src="../../media/buy-now-create-account-2.png" alt="" width="100%">
 					</div>
-					<div class="fl-50 j-fl-st col-l t-l marg">
+					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
 						<h2 class="big">Feature 2</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
-					</div>
-				</div>
-				<div class="flex-box-rev al-c">
-					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
-					</div>
-					<div class="fl-50 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">03</h2>
-						<h2 class="big">Feature 3</h2>
 						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
 					</div>
 				</div>
@@ -360,32 +350,22 @@
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
-					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
+					<div class="fl-60 col-r marg">
+						<img class="shad" src="../../media/guest-checkout-1.png" alt="" width="100%">
 					</div>
-					<div class="fl-50 j-fl-st col-l t-l marg">
+					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
 						<h2 class="big">Feature 1</h2>
 						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
-					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
+					<div class="fl-60 col-r marg">
+						<img class="shad" src="../../media/guest-checkout-2.png" alt="" width="100%">
 					</div>
-					<div class="fl-50 j-fl-st col-l t-l marg">
+					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
 						<h2 class="big">Feature 2</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
-					</div>
-				</div>
-				<div class="flex-box-rev al-c">
-					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/holder-5.png" alt="" width="100%">
-					</div>
-					<div class="fl-50 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">03</h2>
-						<h2 class="big">Feature 3</h2>
 						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
 					</div>
 				</div>
