--- a/work/united-cargo/index.html
+++ b/work/united-cargo/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" href="../../favicon.ico">
 </head>
 <body class="flex-col j-c">
-	<section id="top-nav" class="header flex-col j-c al-c">
+	<section id="top-nav" class="header flex-col j-c al-c" style="background-color: #1a1a1a;">
 		<div class="container">
 			<div class="padding">
 				<div class="flex-box sp-b al-c fl-wr padding">
@@ -112,32 +112,32 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/purdue-logo.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Context</h5>
-						<h2>I am part of the Technology team at JCMA Inc.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h2>Students partner with industry sponsors.</h2>
+						<p>In my undergraduate program at Purdue UX Design, cohorts gained exposure to industry settings through different real-world problem prompts every semester.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/cargo-managers.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
-						<h2>Project managers need a streamlined prioritization tool.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h2>Cargo managers need mobile computing power.</h2>
+						<p>The operational habits of target users, cargo managers, needs to account for a lot of in the field and on the feet app usage. A smart, easy, and deceptively powerful app needs to exist.</p>
 					</div>
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/updated-product.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
-						<h5>Workflow</h5>
-						<h2>A large portion of time is wasted using external tools.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h5>Updated Product</h5>
+						<h2>United Cargo is currently held back by an old website.</h2>
+						<p>The current United Cargo eCommerce web platform that cargo managers use is very outdated with a clunky UI and brand and lack of responsive layouts.</p>
 					</div>
 				</div>
 			</div>
@@ -150,7 +150,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h5>RESEARCH APPROACH</h5>
-						<h2 class="big">Team interviews and observational analysis led me to identify major paint point areas.</h2>
+						<h2 class="big">Industry-established foundations guided strong mobile design in key interface areas.</h2>
 					</div>
 				</div>
 			</div>
@@ -171,7 +171,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Mobile must be intuitive</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>A competitive analysis of leading industry analogues for shipment processing and tracking led the team to a few key insights. Large, obvious UIs exist with clear, easily pressable buttons and smooth flows.</p>
 					</div>
 				</div>
 			</div>
@@ -182,7 +182,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Keep forms quick and concise</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<p>Robust secondary research led me to understand the importance of form design. The journey needs to be broken up across different screens where possible, as users primarily like to tap and advance on mobile contexts.</p>
 					</div>
 				</div>
 			</div>
@@ -192,8 +192,8 @@
 						<img class="shad" src="../../media/old-website-1-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
-						<h3>Lack of state awareness</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<h3>Broken web platform</h3>
+						<p>The existing web tools are an outdated, unsuable platform that don't fit into a modern lifestyle with mobile computing in unexpected contexts. Our team gleaned the primary core functionalities of the website to uphold in our own design.</p>
 					</div>
 				</div>
 			</div>
@@ -205,7 +205,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h5>DESIGN APPROACH</h5>
-						<h2 class="big">User stories guided my scope.<br>I designed wireframes to address each area.</h2>
+						<h2 class="big">The outdated web platform content needed to be restructured and prepared for a new look.</h2>
 					</div>
 				</div>
 			</div>
@@ -225,8 +225,8 @@
 						<img class="shad" src="../../media/sketches.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
-						<h3>Sketching</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<h3>Sketching user flows</h3>
+						<p>Our team took the core functionalities of cargo booking, shipping and tracking, as well as viewing flight schedules and began to sketch out striaghtforward user flows around these.</p>
 					</div>
 				</div>
 			</div>
@@ -236,8 +236,8 @@
 						<img class="shad" src="../../media/uc-wireframes.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
-						<h3>Wireframes</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<h3>Wireframes for key actions</h3>
+						<p>The best features from sketches were grouped and chosen through affinity diagramming to align our key core features. Low-fidelity wireframes then gave shape to these actions to start forming the app skeleton.</p>
 					</div>
 				</div>
 			</div>
@@ -247,8 +247,8 @@
 						<img class="shad" src="../../media/uc-usability-testing.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
-						<h3>Usbility Testing</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<h3>Usbility testing to optimize experience</h3>
+						<p>With higher levels of UI fidelity being added and a brand design system taking shape, our team had proper prototypes to test and present in front of users. Users proposed changes to different small and easy-to-miss details around flights and adding pieces.</p>
 					</div>
 				</div>
 			</div>
@@ -260,7 +260,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h5>DELIVERABLE</h5>
-						<h2 class="big">With prototypes approved, I implemented new data fields, views, and editable forms in the Power Apps environment.</h2>
+						<h2 class="big">After reviewing final insights from interface usability testing, I refined high-fidelity prototypes around core shipment-based actions.</h2>
 					</div>
 				</div>
 			</div>
@@ -283,8 +283,18 @@
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
-						<h2 class="big">Feature 1</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<h2 class="big">View available flight schedules</h2>
+						<p>Users can view a feed of availabe flights on which their shipments can be packed and transported. Clear headers and comfortable card style help to create an intuitive mobile selection process.</p>
+					</div>
+				</div>
+				<div class="flex-box-rev al-c">
+					<div class="fl-50 col-r marg">
+						<img class="shad" src="../../media/booking-form.png" alt="" width="100%">
+					</div>
+					<div class="fl-50 j-fl-st col-l t-l marg">
+						<h2 class="big grey-f">02</h2>
+						<h2 class="big">Add items to shipment</h2>
+						<p>Forms allows users to punch in key details around the items within their cargo shipment. A series of smaller, chunked steps help to lighten up the cognitive load in making decisions.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -292,9 +302,9 @@
 						<img class="shad" src="../../media/booking.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">02</h2>
-						<h2 class="big">Feature 2</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<h2 class="big grey-f">03</h2>
+						<h2 class="big">Review booking details</h2>
+						<p>After adding different bookings for cargo shipment, users can review their details. Comfortable buttons and dropdowns allows a pleasant experience for the thumbs. Users now have checkpoints to either edit of they made a mistake or delete different pieces.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -302,9 +312,9 @@
 						<img class="shad" src="../../media/tracking.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">03</h2>
-						<h2 class="big">Feature 3</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<h2 class="big grey-f">04</h2>
+						<h2 class="big">Track a shipment across space and time</h2>
+						<p>After booking a cargo shipment, users can track and analyze key details of the process. A streamlined UI shows only the most pertinent details of the flight tracking journey.</p>
 					</div>
 				</div>
 			</div>
@@ -316,21 +326,21 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h4>RESULTS</h4>
-						<h2 class="big">Core Design Outputs</h2>
+						<h2 class="big">Core Design Accomplishments</h2>
 					</div>
 				</div>
 				<div class="flex-box">
 					<div class="fl-33 marg">
-						<h4>Efficiency Boost</h4>
-						<p>"I spend more time completing work<br>and less time managing HOW to do that work."</p>
+						<h4>Updated UI</h4>
+						<p>A beautiful, elegant, and brand-aligned UI was designed for the mobile app.</p>
 					</div>
 					<div class="fl-33 marg">
-						<h4>Visibility Increase</h4>
-						<p>"Where projects and tasks are at on the pike is much, much clearer now."</p>
+						<h4>Mobile App</h4>
+						<p>Where there was none, now there is one. Outdated web tools are finally replaced.</p>
 					</div>
 					<div class="fl-33 marg">
-						<h4>10+	</h4>
-						<p>hrs saved weekly per manager</p>
+						<h4>Improved Usability</h4>
+						<p>Managers now have in field tools to handle unexpected situations.</p>
 					</div>
 				</div>
 			</div>
@@ -342,20 +352,20 @@
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>REFLECTIVE</h5>
 						<h2>Reviewing the Work</h2>
-						<p>Let's take a moment to reflect on how the journey of this design and development shook out. All in all, I was happy with this project, and so were my bosses!
+						<p>Looking back at this project after so many years left me with a few final thoughts.</p>
 					</div>
 					<div class="fl-50 col-r marg">
 						<div class="blue-call">
 							<h4>Favorite Part</h4>
-							<p>The implementation for an editable grid with inputs on each field (User Form Priorities) came from an internal component within Power Apps. Finding this really helped materialize my dream for the app.</p>
+							<p>After reviewing this work some time later, I'm proud to see what I could accomplish in undergraduate coursework. I loved how the UI came out for this project.</p>
 						</div>
 						<div class="blue-call">
 							<h4>Hindsight is 20/20</h4>
-							<p>Straying outside of user stories and scoping marginal feature updates is extremely easy to do, but delays the delivery of essential implementations. Something of which to be wary.</p>
+							<p>Different experiential gaps existed and having more time to design out those intermediary screens could help a lot. Also designing for different devices would be great.</p>
 						</div>
 						<div class="blue-call">
 							<h4>Up Next</h4>
-							<p>The component for a visual file repository within the Individual Task View was removed due to issues with the existing Power Apps Component Framework (widget). Some development work in JavaScript will be forthcoming on that.</p>
+							<p>I'd like to extend this work into a fully fledged mobile app layout and fill in gaps that we didn't address back then. It would also be great to see some of this be built on a front-end interface with React.</p>
 						</div>
 					</div>
 				</div>
@@ -366,12 +376,12 @@
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<a href="../nurture-life/" class="white"><h2>Check out this eCommerce web experience:</h2></a>
+						<a href="https://github.com/gregsirko/" target="_blank" class="white"><h2>Check out my GitHub profile:</h2></a>
 					</div>
 				</div>
 				<div class="flex-box">
 					<div class="flex-col marg">
-						<img class="shad" src="../../media/nurture-life-spread.png" alt="" width="100%">
+						<img class="shad" src="../../media/github-screenshot.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
