--- a/work/index.html
+++ b/work/index.html
@@ -66,7 +66,7 @@
 				<div class="flex-box j-c al-c fl-wr">
 					<div class="card">
 						<a href="rita-cms/"><img src="../media/rita-cms-thumb.png" width="100%"></a>
-						<a href="rita-cms/"><h3>Rita CMS -- Software Development</h3></a>
+						<a href="rita-cms/"><h3>Rita CMS -- WordPress Development</h3></a>
 						<p>WordPress web app for club management</p>
 						<p style="color: grey;">#UXDesign #WordPress #Dataverse #API #PHP #Twig #FetchXML</p>
 					</div>
