--- a/about/index.html
+++ b/about/index.html
@@ -110,7 +110,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="w-cont flex-box padding callout">
+			<div class="w-cont flex-box padding sec-pad">
 				<div class="fl-60 marg">
 					<p style="color: #FFF;" class="big">Hi, I’m Greg — a UX designer and web developer with a focus on WordPress and front-end design.</p>
 					<p style="color: #FFF;" class="big">I combine a deep understanding of user behavior with technical development expertise to code thoughtful products built for performance. From eCommerce to marketing sites to productivity software, I deliver meaningful, intuitive digital solutions that delight users and drive competitive business results alike.</p>
@@ -122,7 +122,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c">
+	<section id="outcomes" class="flex-col j-c sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
@@ -169,7 +169,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="intro" class="flex-col">
+	<section id="intro" class="flex-col sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="marg">
