--- a/work/milo/index.html
+++ b/work/milo/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="hero" class="flex-col">
+	<section id="hero" class="flex-col sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="hero" class="flex-col purp-grad">
+	<section id="hero" class="flex-col purp-grad sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -90,7 +90,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="intro" class="flex-col">
+	<section id="intro" class="flex-col sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -144,7 +144,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="research" class="flex-col grey sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -156,7 +156,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="pain-points" class="flex-col j-c">
+	<section id="pain-points" class="flex-col j-c sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-col">
@@ -199,7 +199,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="design" class="flex-col grey sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -211,7 +211,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="pain-points" class="flex-col j-c">
+	<section id="artifacts" class="flex-col j-c sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-col">
@@ -254,7 +254,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="deliverable" class="flex-col grey sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -266,7 +266,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c">
+	<section id="outcomes" class="flex-col j-c sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
@@ -320,7 +320,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c">
+	<section id="outcomes" class="flex-col j-c sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
@@ -374,7 +374,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="results" class="flex-col">
+	<section id="results" class="flex-col sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -400,7 +400,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="reflective" class="flex-col">
+	<section id="reflective" class="flex-col sec-pad">
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="fl-50 j-fl-st col-l marg t-l">
@@ -425,7 +425,7 @@
 				</div>
 			</div>
 	</section>
-	<section id="events" class="flex-col grey">
+	<section id="next" class="flex-col grey white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
