--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="hero" class="flex-col">
+	<section id="hero" class="flex-col sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="hero" class="flex-col white">
+	<section id="hero" class="flex-col white sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -91,7 +91,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="intro" class="flex-col">
+	<section id="intro" class="flex-col sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -267,7 +267,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c">
+	<section id="outcomes" class="flex-col j-c sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
@@ -311,7 +311,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="results" class="flex-col">
+	<section id="results" class="flex-col sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -337,7 +337,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="reflective" class="flex-col">
+	<section id="reflective" class="flex-col sec-pad">
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="fl-50 j-fl-st col-l marg t-l">
@@ -362,7 +362,7 @@
 				</div>
 			</div>
 	</section>
-	<section id="events" class="flex-col grey">
+	<section id="next" class="flex-col grey white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
