--- a/work/nurture-life/index.html
+++ b/work/nurture-life/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="hero" class="flex-col">
+	<section id="hero" class="flex-col sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="hero" class="flex-col orange-grad">
+	<section id="hero" class="flex-col orange-grad sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -90,7 +90,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="intro" class="flex-col">
+	<section id="intro" class="flex-col sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -134,7 +134,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="research" class="flex-col grey sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -146,7 +146,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="pain-points" class="flex-col j-c">
+	<section id="pain-points" class="flex-col j-c sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-col">
@@ -192,7 +192,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="research" class="flex-col grey sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -204,7 +204,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="pain-points" class="flex-col j-c">
+	<section id="pain-points" class="flex-col j-c sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-col">
@@ -258,7 +258,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="design" class="flex-col grey sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -270,7 +270,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c">
+	<section id="outcomes" class="flex-col j-c sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
@@ -288,7 +288,7 @@
 					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
 						<h2 class="big">Recommended Products</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>Once a customer has built out a profile, algorithms on the platform can enage in recommdations. New items pleasantly and conveniently presented to customers is an effective use of artificial intellingence in experience design..</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -298,13 +298,13 @@
 					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
 						<h2 class="big">Registration Form</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<p>Once users have ventured into profile creation, a profile form is presented. This iteration is an improvement on the old. Age ranges are presented as choices instead of specific numbers. Dietary restriction items are presented for further product recommendation in the future. And general notes on favored cuisine are also captured.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c">
+	<section id="outcomes" class="flex-col j-c sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
@@ -321,8 +321,8 @@
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
-						<h2 class="big">Feature 1</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<h2 class="big">One-Time Click</h2>
+						<p>In order to entice users who are more agnostic or anonymous, one click to buy options are presented on products. This allows newcomers to get situated in the ecosystem and try Nurture Life products.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -331,14 +331,14 @@
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
-						<h2 class="big">Feature 2</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<h2 class="big">Account Creation</h2>
+						<p>If a customer desires to sign up within the checkout process, a prompt is situated here. This nudging within the checkout allows users who are warming to have a chance at signing up.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c">
+	<section id="outcomes" class="flex-col j-c sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
@@ -355,8 +355,8 @@
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
-						<h2 class="big">Feature 1</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<h2 class="big">Anonymous Checkout</h2>
+						<p>If a customer wants nothing to do with sign up, they can simply guest checkout.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -365,14 +365,14 @@
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
-						<h2 class="big">Feature 2</h2>
-						<p>By creating committees within your organization, you can effectively manage and host events for all of your volunteering needs. You can schedule events specifically for these moments, and reach out to all committee members inside.</p>
+						<h2 class="big">No Strings Attached</h2>
+						<p>One click checkout leads users to fill out their nilling and shipping info and compelete the transaciton. This process is quick--offering three clicks over two screens, and bypassing the entire account creation scenario.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section id="results" class="flex-col">
+	<section id="results" class="flex-col sec-pad white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -398,7 +398,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="reflective" class="flex-col">
+	<section id="reflective" class="flex-col sec-pad">
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="fl-50 j-fl-st col-l marg t-l">
@@ -423,7 +423,7 @@
 				</div>
 			</div>
 	</section>
-	<section id="events" class="flex-col grey">
+	<section id="next" class="flex-col grey white-f">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
